--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
 	"type": "module",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node --watch app.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"ejs": "^3.1.9",
 		"express": "4.18.2",
 		"prettier": "3.0.3",
 		"zod": "3.22.2"
